@@ -1,4 +1,4 @@
-/* $Id: child-fetch.c,v 1.46 2007-07-16 23:32:56 nicm Exp $ */
+/* $Id: child-fetch.c,v 1.47 2007-07-17 00:03:41 nicm Exp $ */
 
 /*
  * Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -48,6 +48,7 @@ double	time_polling = 0.0;
 double	time_blocked = 0.0;
 #endif
 
+#ifdef DB
 int
 open_cache(struct account *a, struct cache *cache)
 {
@@ -76,6 +77,7 @@ open_cache(struct account *a, struct cache *cache)
 
 	return (0);
 }
+#endif
 
 int
 child_fetch(struct child *child, struct io *io)
@@ -390,7 +392,9 @@ fetch_account(struct account *a, struct io *io, double tim)
 	struct msgbuf	 msgbuf;
 	int		 error;
 	u_int		 n, last;
+#ifdef DB
 	struct cache	*cache;
+#endif
 
 	log_debug2("%s: fetching", a->name);
 
@@ -451,10 +455,12 @@ fetch_account(struct account *a, struct io *io, double tim)
 	}
 
 	/* Close caches. */
+#ifdef DB
 	TAILQ_FOREACH(cache, &conf.caches, entry) {
 		if (cache->db != NULL)
 			db_close(cache->db);
 	}
+#endif
 
 	/* Report error and free queues. */
 	if (error == FETCH_ERROR) {
