@@ -1,4 +1,4 @@
-/* $Id: parse.y,v 1.224 2007-07-11 09:16:03 nicm Exp $ */
+/* $Id: parse.y,v 1.225 2007-07-17 00:03:41 nicm Exp $ */
 
 /*
  * Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -457,6 +457,9 @@ expire: TOKEXPIRE time
 cache: TOKCACHE replpathv expire
 /**    [$2: replpathv (char *)] [$3: expire (long long)] */
        {
+#ifndef DB
+	       yyerror("caches not compiled in");
+#else
 	       struct cache	*cache;
 
 	       TAILQ_FOREACH(cache, &conf.caches, entry) {
@@ -471,6 +474,7 @@ cache: TOKCACHE replpathv expire
 	       TAILQ_INSERT_TAIL(&conf.caches, cache, entry);
 
 	       log_debug2("added cache \"%s\": expire %lld", cache->path, $3);
+#endif /* DB */
        }
 
 /** SET */
@@ -1292,6 +1296,9 @@ actitem: TOKPIPE strv
        | TOKTOCACHE replpathv TOKKEY strv
 /**      [$2: replpathv (char *)] [$4: strv (char *)] */
 	 {
+#ifndef DB
+		 yyerror("caches not compiled in");
+#else
 		 struct deliver_to_cache_data	*data;
 
 		 if (*$2 == '\0')
@@ -1307,6 +1314,7 @@ actitem: TOKPIPE strv
 
 		 data->key.str = $4;
 		 data->path = $2;
+#endif /* DB */
 	 }
        | actions
 /**      [$1: actions (struct replstrs *)] */
@@ -1725,6 +1733,9 @@ expritem: not icase replstrv area
 	| not TOKINCACHE replpathv TOKKEY strv
 /**       [$1: not (int)] [$3: replpathv (char *)] [$5: strv (char *)] */
 	  {
+#ifndef DB
+		  yyerror("caches not compiled in");
+#else
 		  struct match_in_cache_data	*data;
 
 		  if (*$3 == '\0')
@@ -1742,6 +1753,7 @@ expritem: not icase replstrv area
 
 		  data->key.str = $5;
 		  data->path = $3;
+#endif /* DB */
 	  }
         | not TOKMATCHED
 /**       [$1: not (int)] */
