@@ -1,5 +1,7 @@
 16 July 2007
 
+* Outright reject configuration files that uses caches unless built with -DDB,
+  rather than waiting until the cache is used.
 * Rewrite the malloc debugging stuff: lose the call counting, use a splay
   tree instead of a fixed array and use __builtin_return_address and direct
   calls from xmalloc.c rather than horrible #define games, even if it means 
@@ -459,4 +461,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.114 2007-07-16 23:32:55 nicm Exp $
+$Id: CHANGES,v 1.115 2007-07-17 00:03:41 nicm Exp $
